# second_hand_laptops_analysis

./: .env  .gitignore  Untitled.ipynb  add_data.py  get_data.py  main.py  output.json  package.json  pnpm-lock.yaml  pyproject.toml  raw_products.json  requirements.txt  stuff.md
.ipynb_checkpoints/: main-checkpoint.py
convex/: insertData.ts  schema.ts
convex/_generated/: api.d.ts
outputs/: output.json  raw_products.json  structured.json
src/: ai_data_extractor.py  product_scraper.py  schema.py  url_scraper.py  utils.py
tests/: test.py
