[project]
name = "bikkir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "icecream>=2.1.8",
    "ipython>=9.7.0",
    "jupyterlab>=4.4.10",
    "langchain>=1.0.3",
    "langchain-google-genai",
    "seleniumbase>=4.44.7",
    "setuptools>=80.9.0",
    "ty>=0.0.1a25",
]
